<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.freeminder.saralam.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_heder_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_list_new"
            android:contentDescription="@string/app_name"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_logo"
            android:padding="15dp"
            android:text="@string/app_header"
            android:textColor="@color/title_txt_color"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_setting"
            android:contentDescription="@string/app_name"
            android:paddingLeft="10dp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview_pushmessages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header"
        />

    <ListView
        android:id="@+id/list_cust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_import_contacts"
        android:layout_below="@+id/listview_pushmessages"
        android:divider="@drawable/horizontal_sepretor"
        android:scrollbars="vertical" />


    <LinearLayout
        android:id="@+id/ll_import_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/horizontal_seperator"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_import_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Import Contacts"
            android:background="@color/app_heder_bg"
            android:textColor="@color/title_txt_color"
            android:textSize="@dimen/title_txt"
            ></Button>
    </LinearLayout>


    <ImageView
        android:id="@+id/horizontal_seperator"
        android:layout_above="@+id/ll_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/separator_horizontal" />

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_add_new_cust"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/app_heder_bg"
            android:gravity="center"
            android:text="@string/add_customer"
            android:textColor="@color/title_txt_color"
            android:textSize="@dimen/title_txt" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/separator_vertical_small" />

        <Button
            android:id="@+id/btn_send_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/app_heder_bg"
            android:gravity="center"
            android:text="Send All"
            android:textColor="@color/title_txt_color"
            android:textSize="@dimen/title_txt" />
    </LinearLayout>

</RelativeLayout>
